--- a/public/css/smilechildren.css
+++ b/public/css/smilechildren.css
@@ -135,7 +135,7 @@ body {
     padding: 30px;
     background-color: #ffffff;
     border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    /*box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);*/
 }
 
 .text-container {
